<resources>
    <string name="app_name">ColorView</string>
    <string name="box_one_text">Box One</string>
    <string name="box_two_text">Box Two</string>
    <string name="box_three_text">Box Three</string>
    <string name="box_four_text">Box Four</string>
    <string name="box_five_text">Box Five</string>
    <string name="how_to_play">How to play:</string>
    <string name="tap_the_boxes">Tap the boxes make them colored</string>

    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
</resources>
