<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/constraint_layout">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_one_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" android:fontFamily="@font/roboto" style="@style/WhiteBox"
            android:id="@+id/box_one_text"/>
    <TextView
            android:text="@string/box_two_text"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/box_two_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            style="@style/WhiteBox"/>
    <TextView
            android:text="@string/box_three_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_three_text" style="@style/WhiteBox"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintTop_toTopOf="@+id/box_two_text" app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/box_four_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_four_text" style="@style/WhiteBox"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/box_five_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_five_text" style="@style/WhiteBox"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_four_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/label_text" android:textSize="24sp"
            android:fontFamily="@font/roboto" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/info_text"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/tap_the_boxes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/info_text" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto" android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/label_text" android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/box_two_text"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.05"
            android:textAlignment="center"/>

    <Button
            android:id="@+id/red_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/button_red"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintEnd_toStartOf="@+id/yellow_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/yellow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/button_yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/green_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/red_button"
            app:layout_constraintTop_toBottomOf="@+id/label_text"
            app:layout_constraintVertical_bias="1.0"/>

    <Button
            android:id="@+id/green_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/button_green"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/yellow_button" />




</androidx.constraintlayout.widget.ConstraintLayout>